--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "load-alias",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "This module requires files via aliases",
   "main": "./load-alias.js",
   "author": {
@@ -18,8 +18,8 @@
     "test": "mocha"
   },
   "devDependencies": {
-    "mocha": "^3.2.0",
-    "chai": "^3.5.0"
+    "chai": "^3.5.0",
+    "mocha": "^8.0.1"
   },
   "license": "MIT",
   "repository": {
